<resources>
    <string name="app_name">GiveAndTake</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_now">Register Now</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="give_and_take">Give and Take</string>
    <string name="Login">Login</string>
    <string name="login_pic">login_pic</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="i_forgot_my_password">I Forgot my Password</string>
    <string name="ariel_university_logo">Ariel University Logo</string>
    <string name="enter_your_registered_e_mail">Enter your registered e-mail</string>
    <string name="please_enter_your_registered_e_mail_to_receive_your_password_reset_link">Please enter your registered E-mail to receive your password reset link</string>
    <string name="reset_password">Reset Password</string>
    <string name="don_t_have_an_accountt">Don\'t have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="title_activity_reset_password">activity_reset_password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back_to_login_page">Back to Login Page</string>
</resources>