<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="451dp"
        android:layout_height="222dp"
        android:src="@drawable/login_pic"
        android:contentDescription="@string/login_pic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#CC000000"
        android:fontFamily="sans-serif-condensed"
        android:textSize="55sp"
        android:text="@string/give_and_take"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#CC000000"
        android:fontFamily="sans-serif-condensed"
        android:textSize="40sp"
        android:text="Welcome"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text= "@string/Login"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerNowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/register_now"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot your password?"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetPasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/reset_password"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ariel"
        android:contentDescription="@string/ariel_university_logo" />

</LinearLayout>


    <!-- https://www.youtube.com/watch?v=kMEkP6f9_kE&ab_channel=Learnoset-LearnCodingOnline -->